--- a/Question_1_Logistic_Regression.ipynb
+++ b/Question_1_Logistic_Regression.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {
         "id": "tqJVN1UsxEGj"
       },
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "metadata": {
         "id": "qvCmwgcN3GCX"
       },
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "I_Vi8R4M48de"
       },
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "id": "FSnapU_03Nmm"
       },
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 19,
       "metadata": {
         "id": "hV3N3btV3h5g"
       },
@@ -247,7 +247,7 @@
         "    model.w1, model.b = w1, b  \n",
         "    return w1, b\n",
         "    \n",
-        "\n",
+        "lr = 0.001\n",
         "w1, b = train(10000, passed, hours_studied, model, lr)"
       ]
     },
@@ -262,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 20,
       "metadata": {
         "id": "YS0IpWPv3oie"
       },
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 21,
       "metadata": {
         "id": "Y3mk3Xcj3rWy"
       },
@@ -308,6 +308,12 @@
         "    predictions = model.forward(hours_studied)\n",
         "    pass_or_fail = [1 if prob >= 0.5 else 0 for prob in predictions]\n",
         "    # List comprehension https://www.geeksforgeeks.org/python-list-comprehension-using-if-else/\n",
+        "    \"\"\" pass_or_fail = []\n",
+        "        for prob in predictions:\n",
+        "            if prob >= 0.5:\n",
+        "            pass_or_fail.append(1)  # Categorize as pass\n",
+        "        else:\n",
+        "            pass_or_fail.append(0)  # Categorize as fail\"\"\"\n",
         "    return pass_or_fail"
       ]
     },
@@ -326,15 +332,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "pUcUsr0L3vJN"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.836\n"
+          ]
+        }
+      ],
       "source": [
         "def accuracy(prediction, passed):\n",
-        "    #TODO\n",
-        "    pass\n",
+        "    number = 0\n",
+        "    for x, y in zip(prediction, passed):\n",
+        "        if x == y:\n",
+        "            number += 1 \n",
+        "        else:\n",
+        "            number = number\n",
+        "    goodness = number/len(passed)\n",
+        "    return goodness\n",
         "\n",
         "print(accuracy(make_pass_or_fail_prediction(model), passed))"
       ]
@@ -358,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "O_GKPu1939iq"
       },
@@ -389,9 +409,16 @@
       "source": [
         "class LogisticRegressionWithHoursSlept():\n",
         "    def __init__(self, w1, w2, b):\n",
-        "        #TODO\n",
+        "        self.w1 = w1\n",
+        "        self.w2 = w2\n",
+        "        self.b = b\n",
         "    def forward(self, hours_studied, hours_slept):\n",
-        "        #TODO\n",
+        "        sleep_probabilities = []\n",
+        "        for x,y in zip(hours_studied,hours_slept):\n",
+        "            passedprob = 1/(1+math.exp(-(self.w1 * x + self.w2 * y + self.b)))\n",
+        "            sleep_probabilities.append(passedprob)\n",
+        "        return sleep_probabilities\n",
+        "\n",
         "\n",
         "model_with_hours_slept = LogisticRegressionWithHoursSlept(0, 0, 0)"
       ]
@@ -416,14 +443,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "YXaXQ2RK4FUV"
       },
       "outputs": [],
       "source": [
         "def improve_model_with_hours_slept(passed, hours_studied, hours_slept, model, lr):\n",
-        "    #TODO"
+        "    error = []\n",
+        "    predictions = model.forward(hours_studied, hours_slept)\n",
+        "    for x,y in zip(passed, predictions):\n",
+        "        error1 = x - y\n",
+        "        error.append(error1)\n",
+        "   \n",
+        "    \n",
+        "    w1_new = model.w1 + lr*sum([error[i]*hours_studied[i] for i in range(len(error))])\n",
+        "    w2_new = model.w2 + lr*sum([error[i]*hours_slept[i] for i in range(len(error))])\n",
+        "    b_new = model.b + lr*sum([error[i] for i in range(len(error))])\n",
+        "    model.w1 = w1_new\n",
+        "    model.b = b_new\n",
+        "    model.w2 = w2_new\n",
+        "    return w1_new, b_new, w2_new"
       ]
     },
     {
@@ -439,16 +479,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "id": "hh3iBOHN4Knm"
       },
       "outputs": [],
       "source": [
         "def train_with_hours_slept(num_iterations, passed, hours_studied, hours_slept, model, lr):\n",
-        "    #TODO\n",
+        "    w1, w2, b = model.w1, model.w2, model.b\n",
+        "    for i in range(num_iterations):\n",
+        "        w1, w2, b = improve_model_with_hours_slept(passed, hours_studied, hours_slept, model, lr)\n",
+        "        \n",
+        "    model.w1, model.w2, model.b = w1, w2, b  \n",
+        "    return w1,w2, b\n",
+        "    \n",
+        "lr = 0.001\n",
         "\n",
-        "train_with_hours_slept(10000, passed, hours_studied, hours_slept, model, lr)"
+        "w1, w2, b = train_with_hours_slept(10000, passed, hours_studied, hours_slept, model_with_hours_slept, lr)"
       ]
     },
     {
@@ -469,15 +516,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "id": "XpQdncg_4NT6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.51"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "def make_pass_or_fail_prediction_with_hours_slept(model):\n",
-        "    #TODO\n",
-        "\n",
+        "    predictions = model.forward(hours_studied,hours_slept)\n",
+        "    pass_or_fail = [1 if prob >= 0.5 else 0 for prob in predictions]\n",
+        "    return pass_or_fail\n",
         "\n",
         "accuracy(make_pass_or_fail_prediction_with_hours_slept(model_with_hours_slept), passed)"
       ]
